--- a/src/App.css
+++ b/src/App.css
@@ -39,22 +39,45 @@
 
 .about{
   width: 250px;
-  height: 770px;
+  height: 961px;
   background-color: gray;
 }
 
+.lang{
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
+.educ{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.skl{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.contact{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.exp{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.namemy{
+  margin-left: -90px;
+}
 .about h1{
   font-size: 16px;
 }
 
 .skills{
   width: 305px;
-  height: 770px;
+  height: 961px;
   background-color: burlywood;
 }
 
 .workskil{
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 .language{
@@ -87,9 +110,13 @@
 .workexp{
   background-color: gray;
   width: 900px;
-  height: 512px;
+  height: 620px;
+  
 }
 
+.name{
+  margin-left: ;
+}
 .workexp h1{
   font-size: 15px;
 }
@@ -105,6 +132,13 @@
 }
 
 .software{
-  margin-left: -20px;
+  margin-left: -110px;
 }
 
+.myphoto{
+  width: 150px;
+  margin-left: 260px;
+  margin-top: -100px;
+  height: 150px;
+  border-radius: 70px;
+}
